--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <h1 class="head">Weather Checker V2.0 </h1>
             <h6 class="credit">Made By</h6>
             <a href="https://www.instagram.com/this.aakash/" >Aakash</a>
-            <input type="text" placeholder="Enter City" class="input" />
+            <input type="text" placeholder="Enter City"  class="input" id="input" />
+   
             <button type="submit" class="search-button btn" >
                 <img src="https://toppng.com/uploads/preview/magnifying-glass-free-icon-magnifying-glass-icon-11562945594bjpcnqjfko.png">
               </button>
