--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather API V2.0</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font.css">
     
 </head>
 <body>
@@ -18,7 +19,7 @@
             <input type="text" placeholder="Enter City"  class="input" id="input" />
    
             <button type="submit" class="search-button btn" >
-                <img src="https://toppng.com/uploads/preview/magnifying-glass-free-icon-magnifying-glass-icon-11562945594bjpcnqjfko.png">
+                <img src="search.png">
               </button>
         </div>       
        
